--- a/mypro2/pro/art.html
+++ b/mypro2/pro/art.html
@@ -8,7 +8,7 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/pottery.css">
+    <link rel="stylesheet" href="css/art.css">
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -29,14 +29,14 @@
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
+            <li class=" nav-item  p-1 pl-3 pr-3">
+                <a href="./pottery.html" class="b-a nav-link">塑雕陶艺</a>
+            </li>
             <li class=" nav-item active p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">塑雕陶艺</a>
+                <a href="./art.html" class="b-a nav-link">创意美术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">创意美术</a>
-            </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">流金岁月</a>
+                <a href="./years.html" class="b-a nav-link">流金岁月</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">儿童创意</a>
@@ -49,41 +49,40 @@
                 <a href="" class="all nav-link p-0">▼全部</a>
             </li>
             <li class="nav-item ">
-                <a href="" class="livelink  nav-link p-0">浮雕雕塑</a>
+                <a href="" class="livelink  nav-link p-0">缠绕画</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">雕刻/微雕</a>
+                <a href="" class="livelink nav-link p-0">街头</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">陶土</a>
+                <a href="" class="livelink nav-link p-0">水彩</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">陶艺</a>
+                <a href="" class="livelink nav-link p-0">手绘</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">金属丝</a>
+                <a href="" class="livelink  nav-link p-0">拼贴</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">手办</a>
+                <a href="" class="livelink  nav-link p-0">插画</a>
             </li>
             <li class=" nav-item mr-5">
-                <a href="" class="livelink nav-link p-0 ">模玩</a>
+                <a href="" class="livelink nav-link p-0 pr-5">工美</a>
             </li>
         </ul>
     </div>
     <div class="topdy clearfix">
-        <img src="../image/pottery/top.jpg-350" alt="" class="float-left"/>
-        <h1 class="">雕塑陶艺
-            <span class="rspan">雕塑陶艺</span>
+        <h1 class="">创意美术
+            <span class="rspan">最新创意美术作品图片及教程大全</span>
         </h1>
-        <span>欢迎肉丝们来肉丁网陶艺与雕塑频道分享雕塑艺术作品和陶艺制作过程教学以及根雕、木雕等传统手工艺技术，让我们一起为传承并发扬伟大的中国传统手工技艺发光发热！</span>
+        <span>创意美术可以自由发挥，无限联想，这样可以增强孩子想象力和创造力，创意美术更注重的是人们的创造能力和想象能力，创作不一样的，创作属于自己的作品，在最直接的接触美、感受美的基础上；给一些材料，给一些思想，让人们能无时无刻的创作美。创意美术是要有想象力，有个性，有创新的东西，自由发挥，不用拘束在一个框里。</span>
     </div>
     <div class="content">
         <div class="row m-0 mt-3">
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/pottery/p1.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/art/a1.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -94,7 +93,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/pottery/p2.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/art/a2.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -105,7 +104,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/pottery/p3.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/art/a3.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
@@ -115,10 +114,11 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/pottery/p4.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/art/a4.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/></span>手工布艺自制发饰制作方法图解教程</div>
                     </a>
                 </div>
             </div>
@@ -127,7 +127,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/pottery/p5.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/art/a5.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -138,7 +138,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/pottery/p6.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/art/a6.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -149,7 +149,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/pottery/p7.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/art/a7.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
@@ -159,10 +159,11 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/pottery/p8.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/art/a8.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/></span>手工布艺小森式手工烫花棉麻耳环</div>
                     </a>
                 </div>
             </div>
