--- a/mypro2/pro/footer.html
+++ b/mypro2/pro/footer.html
@@ -7,10 +7,17 @@
     <script src="../js/jquery.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/comm.css">
 </head>
 <body>
-<div class="container">
-
+<div class="container-fluid p-0">
+<div class="foot">
+    <p class="m-0">本站提供信息存贮空间服务，部分内容由用户上传，如有侵权，请提供简单说明，将于7日内删除。联系电话：15141117512</p>
+    <span>生活需要创意,创意来自生活！ 2007-2019 </span>
+    <a href="">肉丁网</a>
+    <span> 辽ICP备14016431号 大连肉丁网络科技有限公司</span>
+</div>
 </div>
 </body>
 </html>
