--- a/mypro2/pro/folk.html
+++ b/mypro2/pro/folk.html
@@ -27,18 +27,18 @@
                 <a href="./tradition.html" class="b-a nav-link">传统手艺</a>
             </li>
             <li class=" nav-item active p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">民间艺术</a>
+                <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">塑雕陶艺</a>
+                <a href="./pottery.html" class="b-a nav-link">塑雕陶艺</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">创意美术</a>
+                <a href="./art.html" class="b-a nav-link">创意美术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">流金岁月</a>
+                <a href="./years.html" class="b-a nav-link">流金岁月</a>
             </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
+            <li class=" nav-item  p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">儿童创意</a>
             </li>
         </ul>
