--- a/mypro2/pro/old.html
+++ b/mypro2/pro/old.html
@@ -21,7 +21,7 @@
                 <a href="./live.html" class="b-a nav-link ">生活DIY</a>
             </li>
             <li class=" nav-item active p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">旧物改造</a>
+                <a href="./old.html" class="b-a nav-link">旧物改造</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./tradition.html" class="b-a nav-link">传统手艺</a>
@@ -30,13 +30,13 @@
                 <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">塑雕陶艺</a>
+                <a href="./pottery.html" class="b-a nav-link">塑雕陶艺</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">创意美术</a>
+                <a href="./art.html" class="b-a nav-link">创意美术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">流金岁月</a>
+                <a href="./years.html" class="b-a nav-link">流金岁月</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">儿童创意</a>
