--- a/mypro2/pro/pottery.html
+++ b/mypro2/pro/pottery.html
@@ -8,7 +8,7 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/live.css">
+    <link rel="stylesheet" href="css/pottery.css">
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -17,8 +17,8 @@
             <li class="nav-item p-1 pl-4 pr-4 ">
                 <a href="./index.html" class="b-a nav-link pl-3 pr-3">首页</a>
             </li>
-            <li class="nav-item active p-1 pl-3 pr-3 ">
-                <a href="" class="b-a nav-link ">生活DIY</a>
+            <li class="nav-item  p-1 pl-3 pr-3 ">
+                <a href="./live.html" class="b-a nav-link ">生活DIY</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./old.html" class="b-a nav-link">旧物改造</a>
@@ -29,14 +29,14 @@
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">塑雕陶艺</a>
+            <li class=" nav-item active p-1 pl-3 pr-3">
+                <a href="./pottery.html" class="b-a nav-link">塑雕陶艺</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">创意美术</a>
+                <a href="./art.html" class="b-a nav-link">创意美术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">流金岁月</a>
+                <a href="./years.html" class="b-a nav-link">流金岁月</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">儿童创意</a>
@@ -49,53 +49,41 @@
                 <a href="" class="all nav-link p-0">▼全部</a>
             </li>
             <li class="nav-item ">
-                <a href="" class="livelink  nav-link p-0">生活</a>
+                <a href="" class="livelink  nav-link p-0">浮雕雕塑</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">摄影</a>
+                <a href="" class="livelink nav-link p-0">雕刻/微雕</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">家居</a>
+                <a href="" class="livelink nav-link p-0">陶土</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">饰品</a>
+                <a href="" class="livelink nav-link p-0">陶艺</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">玩具</a>
+                <a href="" class="livelink  nav-link p-0">金属丝</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">电子</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">蜡烛</a>
-            </li>
-            <li class=" nav-item ">
-                <a href="" class="livelink nav-link p-0">手工皂</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">测试</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">欣赏</a>
+                <a href="" class="livelink  nav-link p-0">手办</a>
             </li>
             <li class=" nav-item mr-5">
-                <a href="" class="livelink nav-link p-0">发型制作</a>
+                <a href="" class="livelink nav-link p-0 pr-5">模玩</a>
             </li>
         </ul>
     </div>
     <div class="topdy clearfix">
-        <img src="../image/live/top.jpg-350" alt="" class="float-left"/>
-        <h1 class="">生活DIY
-            <span class="rspan">生活DIY</span>
+        <img src="../image/pottery/top.jpg-350" alt="" class="float-left"/>
+        <h1 class="">雕塑陶艺
+            <span class="rspan">雕塑陶艺</span>
         </h1>
-        <span>肉丁网《生活DIY》栏目提供各种生活中的小创意。丰富的DIY手工制作教程和创意家居、创意生活图片案例让你在家中轻松制作各种玩具、饰品和生活用品。来肉丁网学习手工制作,让你的生活更加丰富多彩！</span>
+        <span>欢迎肉丝们来肉丁网陶艺与雕塑频道分享雕塑艺术作品和陶艺制作过程教学以及根雕、木雕等传统手工艺技术，让我们一起为传承并发扬伟大的中国传统手工技艺发光发热！</span>
     </div>
     <div class="content">
         <div class="row m-0 mt-3">
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/live/l1.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/pottery/p1.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -106,7 +94,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l2.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/pottery/p2.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -117,7 +105,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/live/l3.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/pottery/p3.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
@@ -127,7 +115,7 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/live/l4.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/pottery/p4.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
@@ -139,7 +127,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/live/l5.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/pottery/p5.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -150,7 +138,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l6.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/pottery/p6.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -161,7 +149,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/live/l7.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/pottery/p7.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
@@ -171,7 +159,7 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/live/l8.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/pottery/p8.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
