--- a/mypro2/pro/years.html
+++ b/mypro2/pro/years.html
@@ -8,7 +8,7 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/pottery.css">
+    <link rel="stylesheet" href="css/years.css">
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -29,14 +29,14 @@
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
+            <li class=" nav-item  p-1 pl-3 pr-3">
+                <a href="./pottery.html" class="b-a nav-link">塑雕陶艺</a>
+            </li>
+            <li class=" nav-item p-1 pl-3 pr-3">
+                <a href="./art.html" class="b-a nav-link">创意美术</a>
+            </li>
             <li class=" nav-item active p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">塑雕陶艺</a>
-            </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">创意美术</a>
-            </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">流金岁月</a>
+                <a href="./years.html" class="b-a nav-link">流金岁月</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">儿童创意</a>
@@ -49,41 +49,35 @@
                 <a href="" class="all nav-link p-0">▼全部</a>
             </li>
             <li class="nav-item ">
-                <a href="" class="livelink  nav-link p-0">浮雕雕塑</a>
+                <a href="" class="livelink  nav-link p-0">老照片</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">雕刻/微雕</a>
+                <a href="" class="livelink nav-link p-0">老行当</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">陶土</a>
+                <a href="" class="livelink nav-link p-0">老物件</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">陶艺</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">金属丝</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">手办</a>
+                <a href="" class="livelink nav-link p-0">老习俗</a>
             </li>
             <li class=" nav-item mr-5">
-                <a href="" class="livelink nav-link p-0 ">模玩</a>
+                <a href="" class="livelink nav-link p-0 pr-5">童年记忆</a>
             </li>
         </ul>
     </div>
     <div class="topdy clearfix">
-        <img src="../image/pottery/top.jpg-350" alt="" class="float-left"/>
-        <h1 class="">雕塑陶艺
-            <span class="rspan">雕塑陶艺</span>
+        <img src="../image/years/top.jpg-350" alt="" class="float-left"/>
+        <h1 class="">流金岁月
+            <span class="rspan">流金岁月</span>
         </h1>
-        <span>欢迎肉丝们来肉丁网陶艺与雕塑频道分享雕塑艺术作品和陶艺制作过程教学以及根雕、木雕等传统手工艺技术，让我们一起为传承并发扬伟大的中国传统手工技艺发光发热！</span>
+        <span>流年似水，岁月蹉跎，不知不觉的便遗忘了许多，那些浅浅淡淡的过往，是岁月留给我们的风景，本栏目为您分享那些过往的老照片、老物件以及即将逝去的民俗风情和童年的美好记忆。</span>
     </div>
     <div class="content">
         <div class="row m-0 mt-3">
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/pottery/p1.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/years/y1.png) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -94,7 +88,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/pottery/p2.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/years/y2.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -105,7 +99,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/pottery/p3.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/years/y3.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
@@ -115,7 +109,7 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/pottery/p4.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/years/y4.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
@@ -127,7 +121,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/pottery/p5.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/years/y5.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -138,7 +132,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/pottery/p6.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/years/y6.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -149,7 +143,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/pottery/p7.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/years/y7.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
@@ -159,7 +153,7 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/pottery/p8.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/years/y8.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
